feat: refactor SubmissionController to create reusable headers and improve query formatting